--- a/src/containers/Skills/Skills.scss
+++ b/src/containers/Skills/Skills.scss
@@ -20,8 +20,7 @@
   .app__skills-list {
     flex: 1;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
   
     margin-right: 5rem;
