--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,10 +6,10 @@
     align-items: center;
   
     padding: 1rem 2rem;
-    background: rgba(255, 255, 255, 0.25);
+    background: rgba(255, 255, 255, .85);
     // box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
+    // backdrop-filter: blur(4px);
+    // -webkit-backdrop-filter: blur(4px);
     border: 1px solid rgba(255, 255, 255, 0.18);
     position: fixed;
     z-index: 2;
@@ -58,11 +58,12 @@
         color: var(--gray-color);
         text-decoration: none;
         flex-direction: column;
+        font-size: 1.15rem;
   
         text-transform: uppercase;
-        font-weight: 500;
+        font-weight: 550;
   
-        transition: all 0.3s ease-in-out;
+        transition: all 0.1s ease-in-out;
   
         &:hover {
           color: var(--secondary-color);
