--- a/src/containers/testimonial/Testimonial.css
+++ b/src/containers/testimonial/Testimonial.css
@@ -203,4 +203,16 @@
     width: 100%;
   }
 }
+
+.Achievement-Header {
+  font-size: 2rem;
+  font-weight: 800;
+  padding-bottom: 3rem;
+}
+
+@media screen and (max-width: 800px) {
+  .Achievement-Header {
+    font-size: 1.5rem;
+  }
+}
 /*# sourceMappingURL=Testimonial.css.map */
