--- a/src/containers/testimonial/Testimonial.scss
+++ b/src/containers/testimonial/Testimonial.scss
@@ -158,4 +158,14 @@
       width: 100%;
     }
   }
+
+  .Achievement-Header {
+    font-size: 2rem;
+    font-weight: 800;
+    padding-bottom: 3rem;
+
+    @media screen and (max-width: 800px) {
+      font-size: 1.5rem;
+    }
+  }
   
