after my data mbl opt

--- a/src/containers/Skills/Skills.scss
+++ b/src/containers/Skills/Skills.scss
@@ -27,8 +27,9 @@
   
     @media screen and (max-width: 900px) {
       margin-right: 0;
-      justify-content: center;
-      align-items: center;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+
     }
   }
   
