--- a/src/containers/Skills/Skills.css
+++ b/src/containers/Skills/Skills.css
@@ -50,12 +50,10 @@
 @media screen and (max-width: 900px) {
   .app__skills-list {
     margin-right: 0;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
   }
 }
 
