--- a/src/containers/footer/Footer.scss
+++ b/src/containers/footer/Footer.scss
@@ -85,6 +85,8 @@
       textarea {
         width: 100%;
         padding: 0.95rem;
+        padding-left: 1.5rem;
+        padding-top: 1.2rem;
         border: none;
         border-radius: 7px;
         background-color: var(--primary-color);
