--- a/src/containers/Skills/Skills.css
+++ b/src/containers/Skills/Skills.css
@@ -69,10 +69,10 @@
 }
 
 .app__skills-item div {
-  width: 90px;
-  height: 90px;
+  width: 140px;
+  height: 140px;
   border-radius: 50%;
-  background-color: #fef4f5;
+  background-color: #1d064b;
 }
 
 .app__skills-item div img {
@@ -81,8 +81,8 @@
 }
 
 .app__skills-item div:hover {
-  -webkit-box-shadow: 0 0 25px #fef4f5;
-          box-shadow: 0 0 25px #fef4f5;
+  -webkit-box-shadow: 0 0 15px #0f0327;
+          box-shadow: 0 0 15px #0f0327;
 }
 
 @media screen and (min-width: 2000px) {
