--- a/src/containers/Skills/Skills.scss
+++ b/src/containers/Skills/Skills.scss
@@ -42,10 +42,10 @@
     transition: all 0.3s ease-in-out;
   
     div {
-      width: 90px;
-      height: 90px;
+      width: 140px;
+      height: 140px;
       border-radius: 50%;
-      background-color: #fef4f5;
+      background-color: #1d064b;
   
       img {
         width: 50%;
@@ -53,7 +53,7 @@
       }
   
       &:hover {
-        box-shadow: 0 0 25px #fef4f5;
+        box-shadow: 0 0 15px #0f0327;
       }
   
       @media screen and (min-width: 2000px) {
