--- a/src/containers/Skills/Skills.scss
+++ b/src/containers/Skills/Skills.scss
@@ -22,7 +22,7 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
-  
+    flex-wrap: wrap;
     margin-right: 5rem;
   
     @media screen and (max-width: 900px) {
